aggiunto un nuovo routing

--- a/ProgettoEsame/ProgettoEsame/Views/Home/Index.cshtml
+++ b/ProgettoEsame/ProgettoEsame/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    Hi there @Model.FirstName @Model.LastName !
+    Hi there @Model.firstName @Model.lastName !  Your id is @Model.id . 
 </body>
 </html>
 
